tabletop-tracker/main/default/objects/Player_Session__c/Player_Session__c.object-meta.xml
<CustomObject>
    <label>Player Session</label>
    <nameField>
        <label>Player Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Player Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>