tabletop-tracker/main/default/objects/Player_Session__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Player Sessions</relationshipLabel>
    <relationshipName>Player_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>