tabletop-tracker/main/default/objects/Player_Session__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Character</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Player Sessions</relationshipLabel>
    <relationshipName>Player_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>