tabletop-tracker/main/default/objects/Player_Session__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Player Sessions</relationshipLabel>
    <relationshipName>Player_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>