tabletop-tracker/main/default/objects/Player_Session__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Player Sessions</relationshipLabel>
    <relationshipName>Player_Sessions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>